--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/Strategy/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/Strategy/StrategyEditor.html
@@ -1,11 +1,11 @@
 ﻿<div vr-modalcontent width="'75%'" ng-controller="StrategyEditorController">
     <vr-modalbody vr-loader="isGettingData">
         <vr-form name="formStrategyEditor">
-            <vr-row>
+            <vr-row removeline >
                 <vr-columns colnum="2">
                     <vr-textbox value="name" label="Name" isrequired></vr-textbox>
                 </vr-columns>
-                <vr-columns colnum="8">
+                <vr-columns colnum="2">
                     <vr-textbox value="description" label="Description" isrequired></vr-textbox>
                 </vr-columns>
                 <vr-columns colnum="2">
@@ -30,7 +30,7 @@
                             <vr-columns colnum="9">
                                 <div>
 
-                                    <vr-datagrid datasource="strategyFilters" maxheight="300px">
+                                    <vr-datagrid datasource="strategyFilters" maxheight="400px">
                                         <vr-datagridcolumn headertext="' '" widthfactor="3">       <vr-switch value="dataItem.isSelected"></vr-switch>            </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'Filter #'" field="'filterId'" widthfactor="3">                   </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'Description'" field="'description'" widthfactor="20">                   </vr-datagridcolumn>
@@ -53,24 +53,24 @@
                                                 <vr-select datasource="hours" datatextfield="name" datavaluefield="id" label="Peak Hours" selectedvalues="selectedPeakHours" ismultipleselection isrequired></vr-select>
                                             </vr-columns>
                                         </vr-row>
-                                        <vr-row ng-if="strategyFilters[15].isSelected  || strategyFilters[16].isSelected ">
+                                        <vr-row ng-show="strategyFilters[15].isSelected  || strategyFilters[16].isSelected ">
 
                                             <vr-columns colnum="11">
-                                                <vr-textbox value="gapbetweenconsecutivecalls" label="Gap Between Consecutive Calls"></vr-textbox>
+                                                <vr-textbox value="gapbetweenconsecutivecalls" label="Gap Between Consecutive Calls" isrequired></vr-textbox>
                                             </vr-columns>
                                         </vr-row>
-                                        <vr-row ng-if="strategyFilters[17].isSelected">
+                                        <vr-row ng-show="strategyFilters[17].isSelected">
 
 
                                             <vr-columns colnum="11">
-                                                <vr-textbox value="maxLowDurationCall" label="Max. Low Duration Call (s) "></vr-textbox>
+                                                <vr-textbox value="maxLowDurationCall" label="Max. Low Duration Call (s) " isrequired></vr-textbox>
                                             </vr-columns>
 
                                         </vr-row>
-                                        <vr-row ng-if="strategyFilters[8].isSelected">
+                                        <vr-row ng-show="strategyFilters[8].isSelected">
 
                                             <vr-columns colnum="11">
-                                                <vr-textbox value="minCountofCallsinActiveHour" label="Min. Call Count in Active Hours"></vr-textbox>
+                                                <vr-textbox value="minCountofCallsinActiveHour" label="Min. Call Count in Active Hours" isrequired></vr-textbox>
                                             </vr-columns>
 
                                         </vr-row>
@@ -94,7 +94,7 @@
                             <div style="background-color:black">
                                 <vr-button type="Add" data-onclick="AddSuspicionLevel"></vr-button>
                             </div>
-                            <vr-datagrid datasource="strategyLevels" maxheight="300px">
+                            <vr-datagrid datasource="strategyLevels" maxheight="400px">
                                 <vr-datagridcolumn headertext="'Suspicion Level'" widthfactor="20">  <vr-select datasource="viewScope.suspicionLevels" datatextfield="name" datavaluefield="id" ng-init="dataItem.suspicionLevel = (dataItem.suspicionLevel == undefined ? viewScope.suspicionLevels[0] : dataItem.suspicionLevel)" selectedvalues="dataItem.suspicionLevel" isrequired widthfactor="20" columnindex="0"></vr-select>       </vr-datagridcolumn>
                                 <vr-datagridcolumn ng-repeat="filter in strategyFilters" ng-show="filter.isSelected" columnindex="$index + 1" headertext="'Filter: ' + filter.filterId" tag="filter">
                                     <div ng-init="filterIndex = viewScope.strategyFilters.indexOf(colDef.tag)">
@@ -120,7 +120,6 @@
 
 
             </vr-row>
-            {{selectedPeakHours}}
         </vr-form>
     </vr-modalbody>
     <div>
