--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RouteRuleEditor.html
@@ -20,23 +20,29 @@
 
                     </vr-columns>
                 </vr-row>
-                <h4 ng-show="selectedRuleType  && selectedRuleType.name != 'Block Route' && selectedRuleType.url!='' ">{{selectedRuleType.name}} Details:</h4>
-                <vr-row ng-show="selectedRuleType  && selectedRuleType.name != 'Block Route' && selectedRuleType.url!='' " ng-include src="selectedRuleType.url">
-
-                    <!--<div class="col-lg-12 ">
-                        <h4>{{selectedRuleType.name}} Details:</h4>
-                    </div>
-                    <div style="min-height:70px">
-
-                    </div>-->
-                </vr-row>
-                <vr-row removeline>
-                    <vr-columns colnum="12">
-                        <vr-label>Reason:</vr-label>
-                        <textarea class="form-control" ng-model="Reason" />
+                <vr-row>
+                    <vr-columns width="fullrow">
+                        <h4 ng-show="selectedRuleType  && selectedRuleType.name != 'Block Route' && selectedRuleType.url!='' ">{{selectedRuleType.name}} Details:</h4>
                     </vr-columns>
-                </vr-row>
+                       
+</vr-row>
+                    
+                    <vr-row ng-show="selectedRuleType  && selectedRuleType.name != 'Block Route' && selectedRuleType.url!='' " ng-include src="selectedRuleType.url">
+
+                        <!--<div class="col-lg-12 ">
+                <h4>{{selectedRuleType.name}} Details:</h4>
             </div>
+            <div style="min-height:70px">
+
+            </div>-->
+                    </vr-row>
+                    <vr-row removeline>
+                        <vr-columns colnum="12">
+                            <vr-label>Reason:</vr-label>
+                            <textarea class="form-control" ng-model="Reason" />
+                        </vr-columns>
+                    </vr-row>
+</div>
             <div ng-show="choiceCarrierSetSelected">
                 <vr-row>
                     <vr-columns colnum="3">
@@ -63,7 +69,7 @@
             </div>
 
             <div ng-show="choiceScheduleSelected">
-                <vr-row removeline>
+                <vr-row >
                     <vr-columns width="normal">
                         <vr-datetimepicker label="Begin Effective Date:" type="date" value="BED" isrequired></vr-datetimepicker>
                     </vr-columns>
@@ -71,7 +77,7 @@
                         <vr-datetimepicker label="End Effective Date:" type="date" value="EED"></vr-datetimepicker>
                     </vr-columns>
                 </vr-row>
-                <vr-row removeline>
+                <vr-row >
                     <vr-columns width="normal">
                         <vr-datetimepicker label="From Time:" type="date" value="FromTime"></vr-datetimepicker>
 
