--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/CDR/CDRLog.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/CDR/CDRLog.html
@@ -2,35 +2,33 @@
         <vr-form name="formFilter">
             <div ng-hide="filterSectionCollapsed" vr-loader="isInitializing">
                 <vr-row removeline>
-                    <vr-columns colnum="2">
+                    <vr-columns width="normal">
                         <vr-select datasource="switches" datatextfield="Name" datavaluefield="SwitchId" selectedvalues="selectedSwitches" label="Switches:" ismultipleselection></vr-select>
                     </vr-columns>
-                    <vr-columns colnum="2">
+                    <vr-columns width="normal">
                         <vr-select datasource="customers" datatextfield="Name" datavaluefield="CarrierAccountID" selectedvalues="selectedCustomers" label="Customers:" ismultipleselection></vr-select>
                     </vr-columns>
-                    <vr-columns colnum="2">
+                    <vr-columns width="normal">
                         <vr-select label="Suppliers:" datasource="suppliers"
                                    datatextfield="Name" datavaluefield="CarrierAccountID" selectedvalues="selectedSuppliers" ismultipleselection></vr-select>
                     </vr-columns>
-                    <vr-columns colnum="2">
-                        <vr-select  ismultipleselection datasource="searchZones" label="Zones: "selectedvalues="selectedZones" datatextfield="Name" datavaluefield="ZoneId"
+                    <vr-columns width="normal">
+                        <vr-select ismultipleselection datasource="searchZones" label="Zones: " selectedvalues="selectedZones" datatextfield="Name" datavaluefield="ZoneId"
                                    entityname="Zones"></vr-select>
                     </vr-columns>
                   
-                    <vr-columns colnum="2">
+                    <vr-columns width="normal">
                         <vr-select datasource="CDROption" datatextfield="description" datavaluefield="value" selectedvalues="selectedCDROption" label="CDR Option" isrequired></vr-select>
                     </vr-columns>
-                    <vr-columns colnum="2">
+                    <vr-columns width="normal">
                         <vr-textbox value="nRecords" label="Limit Results to"></vr-textbox>
                     </vr-columns>
-                    <vr-columns colnum="2">
+                    <vr-columns width="normal">
                         <vr-datetimepicker type="date" label="From:" value="fromDate" isrequired></vr-datetimepicker>
                     </vr-columns>
-                    <vr-columns colnum="2">
+                    <vr-columns width="normal">
                         <vr-datetimepicker type="date" label="To:" value="toDate" isrequired></vr-datetimepicker>
                     </vr-columns>
-                    
-                   
                 </vr-row> 
             </div>
         </vr-form>
@@ -44,12 +42,9 @@
                 </div>
             </vr-actionbar>
         </vr-row>
-        <!--<input type="text" ng-model="name" />-->
-
-
          <div ng-show="showResult" vr-loader="isGettingData">
              <vr-row>
-                 <vr-columns colnum="12" simplecol>
+                 <vr-columns width="fullrow" simplecol>
                      <vr-datagrid datasource="data" pagersettings="mainGridPagerSettings" data-on-ready="onMainGridReady" maxheight="500px" >
                          <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" Type="measure.type" tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
 
