--- a/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Directives/ReprocessDefinition/Templates/ReprocessDefinitionGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Directives/ReprocessDefinition/Templates/ReprocessDefinitionGridTemplate.html
@@ -6,4 +6,7 @@
              idfield="Entity.ReprocessDefinitionId">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.ReprocessDefinitionId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
