--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertRule/Templates/VRAlertRuleGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertRule/Templates/VRAlertRuleGridTemplate.html
@@ -5,7 +5,7 @@
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="scopeModel.menuActions"
-             idfield="Entity.VRAlertRuleId">
+             idfield="Entity.VRAlertRuleId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.VRAlertRuleId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
