--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/RouteSyncDefinition/Templates/RouteSyncDefinitionGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/RouteSyncDefinition/Templates/RouteSyncDefinitionGridTemplate.html
@@ -6,4 +6,7 @@
              idfield="Entity.RouteSyncDefinitionId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.RouteSyncDefinitionId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid> 
