--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/BranchSubscriberInvoiceReport.rdlc
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/BranchSubscriberInvoiceReport.rdlc
@@ -617,6 +617,7 @@
             <TablixMember />
           </TablixMembers>
         </TablixRowHierarchy>
+        <DataSetName>RDLCRetail</DataSetName>
         <Top>5.22681in</Top>
         <Left>0.10865in</Left>
         <Height>2in</Height>
@@ -1152,6 +1153,7 @@
             <TablixMember />
           </TablixMembers>
         </TablixRowHierarchy>
+        <DataSetName>RDLCRetail</DataSetName>
         <Top>1.95175in</Top>
         <Left>4.80812in</Left>
         <Height>1.5in</Height>
@@ -1541,6 +1543,7 @@
             <TablixMember />
           </TablixMembers>
         </TablixRowHierarchy>
+        <DataSetName>RDLCRetail</DataSetName>
         <Top>0.63231in</Top>
         <Left>2.39542in</Left>
         <Height>1.25in</Height>
@@ -1821,6 +1824,7 @@
             <TablixMember />
           </TablixMembers>
         </TablixRowHierarchy>
+        <DataSetName>RDLCRetail</DataSetName>
         <Top>3.54181in</Top>
         <Left>0.10865in</Left>
         <Height>0.75in</Height>
@@ -2375,6 +2379,7 @@
             </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
+        <DataSetName>RDLCRetail</DataSetName>
         <Top>7.29625in</Top>
         <Left>0.10865in</Left>
         <Height>0.5in</Height>
@@ -2422,53 +2427,29 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
           <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
-      <Rectangle Name="Rectangle1">
-        <ReportItems>
-          <Subreport Name="SubscriberInvoiceItemsReportName">
-            <ReportName>SubscriberInvoiceItemsReport</ReportName>
-            <Parameters>
-              <Parameter Name="SubscriberName">
-                <Value>=Parameters!SubscriberNumber.Value</Value>
-              </Parameter>
-              <Parameter Name="AccountNumber">
-                <Value>=Parameters!SubscriberNumber.Value</Value>
-              </Parameter>
-              <Parameter Name="Email">
-                <Value>=Parameters!AccountName.Value</Value>
-              </Parameter>
-              <Parameter Name="TotalUnitCalls">
-                <Value>=Parameters!Quantity.Value</Value>
-              </Parameter>
-            </Parameters>
-            <Height>0.31181in</Height>
-            <Width>7.98583in</Width>
-            <Style>
-              <Border>
-                <Style>None</Style>
-              </Border>
-            </Style>
-          </Subreport>
-        </ReportItems>
-        <PageBreak>
-          <BreakLocation>Start</BreakLocation>
-        </PageBreak>
-        <KeepTogether>true</KeepTogether>
-        <Top>8.64139in</Top>
-        <Left>0.03188in</Left>
-        <Height>0.31181in</Height>
-        <Width>7.98583in</Width>
+      <Subreport Name="SubscriberInvoiceItemsReportName">
+        <ReportName>SubscriberInvoiceItemsReport</ReportName>
+        <Parameters>
+          <Parameter Name="SubscriberName">
+            <Value>=Parameters!AccountName.Value</Value>
+          </Parameter>
+        </Parameters>
+        <Top>8.69667in</Top>
+        <Left>0.12875in</Left>
+        <Height>0.4375in</Height>
+        <Width>7.81477in</Width>
         <ZIndex>9</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
         </Style>
-      </Rectangle>
+      </Subreport>
     </ReportItems>
-    <Height>9.05084in</Height>
+    <Height>11.69667in</Height>
     <Style />
   </Body>
-  <Width>8.04959in</Width>
+  <Width>8.26105in</Width>
   <Page>
     <PageFooter>
       <Height>0.01042in</Height>
@@ -2495,6 +2476,13 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
       </ConnectionProperties>
       <rd:DataSourceID>078343b6-caef-4e3e-9454-d67c05c2e96e</rd:DataSourceID>
     </DataSource>
+    <DataSource Name="RetailMultiNetEntities1">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>1ac423be-e212-4f04-bca3-bc4d2ea8d7a7</rd:DataSourceID>
+    </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="RDLCRetail">
@@ -2519,20 +2507,62 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
           <DataField>ChargeableEntityId</DataField>
           <rd:TypeName>System.Guid</rd:TypeName>
         </Field>
+      </Fields>
+      <rd:DataSetInfo>
+        <rd:DataSetName>Retail.MultiNet.Entities</rd:DataSetName>
+        <rd:TableName>RDLCBranchSummaryItemDetails</rd:TableName>
+        <rd:ObjectDataSourceSelectMethod>GetRDLCSummaryInvoiceItemDetailsSchema</rd:ObjectDataSourceSelectMethod>
+        <rd:ObjectDataSourceType>Retail.MultiNet.Entities.RDLCBranchSummaryItemDetails, Retail.MultiNet.Entities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+      </rd:DataSetInfo>
+    </DataSet>
+    <DataSet Name="BranchSummaryDetails">
+      <Query>
+        <DataSourceName>RetailMultiNetEntities1</DataSourceName>
+        <CommandText>/* Local Query */</CommandText>
+      </Query>
+      <Fields>
+        <Field Name="WHTax">
+          <DataField>WHTax</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="WHTaxAmount">
+          <DataField>WHTaxAmount</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="SalesTax">
+          <DataField>SalesTax</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
         <Field Name="SalesTaxAmount">
           <DataField>SalesTaxAmount</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
-        <Field Name="AmountWithTaxes">
-          <DataField>AmountWithTaxes</DataField>
+        <Field Name="CurrencyId">
+          <DataField>CurrencyId</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="Quantity">
+          <DataField>Quantity</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="CurrentCharges">
+          <DataField>CurrentCharges</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="TotalCurrentCharges">
+          <DataField>TotalCurrentCharges</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="AccountId">
+          <DataField>AccountId</DataField>
+          <rd:TypeName>System.Int64</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>Retail.MultiNet.Entities</rd:DataSetName>
-        <rd:TableName>RDLCSummaryInvoiceItemDetails</rd:TableName>
-        <rd:ObjectDataSourceSelectMethod>GetRDLCSummaryInvoiceItemDetailsSchema</rd:ObjectDataSourceSelectMethod>
-        <rd:ObjectDataSourceType>Retail.MultiNet.Entities.RDLCSummaryInvoiceItemDetails, Retail.MultiNet.Entities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
+        <rd:TableName>RDLCBranchSummaryDetails</rd:TableName>
+        <rd:ObjectDataSourceSelectMethod>GetRDLCBranchSummaryDetailsSchema</rd:ObjectDataSourceSelectMethod>
+        <rd:ObjectDataSourceType>Retail.MultiNet.Entities.RDLCBranchSummaryDetails, Retail.MultiNet.Entities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</rd:ObjectDataSourceType>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
